--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "express-session": "^1.12.1",
     "mongoose": "^4.3.3",
     "passport": "^0.3.2",
-    "passport-github": "^1.0.0"
+    "passport-github": "^1.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
