--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/brentdewe/fcc-votingapp#readme",
   "dependencies": {
     "angular": "^1.4.8",
+    "body-parser": "^1.14.2",
     "connect-mongodb-session": "^1.1.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
