--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "build:js": "cpx 'client/modules/**/*.js' client/dist/modules -c 'uglifyjs'",
     "build:html": "cpx 'client/modules/**/*.html' client/dist/modules",
+    "build": "parallelshell 'npm run build:html' 'npm run build:js'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:server": "nodemon -q -I -w app -w server.js"
   },
@@ -35,6 +36,7 @@
   "devDependencies": {
     "cpx": "^1.2.1",
     "nodemon": "^1.8.1",
+    "parallelshell": "^2.0.0",
     "uglify-js": "^2.6.1"
   }
 }
