--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Voting web app",
   "main": "server.js",
   "scripts": {
-    "build:js": "cpx 'client/modules/**/*.js' client/dist/modules -c 'uglifyjs'",
-    "build:html": "cpx 'client/modules/**/*.html' client/dist/modules",
+    "build:js": "cpx 'client/modules/**/*.js' client/dist/modules -c uglifyjs",
+    "build:html": "cpx 'client/modules/**/*.html' client/dist/modules -c 'node scripts/minimize-pipe.js'",
     "build": "parallelshell 'npm run build:html' 'npm run build:js'",
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch:server": "nodemon -q -I -w app -w server.js"
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "cpx": "^1.2.1",
+    "minimize": "^1.7.4",
     "nodemon": "^1.8.1",
     "parallelshell": "^2.0.0",
     "uglify-js": "^2.6.1"
