--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Voting web app",
   "main": "server.js",
   "scripts": {
-    "build:js": "cpx 'client/modules/**/*.js' client/dist/modules -c uglifyjs",
+    "build:js": "cpx 'client/modules/**/*.js' client/dist/modules -c 'uglifyjs --compress --mangle'",
     "build:html": "cpx 'client/modules/**/*.html' client/dist/modules -c 'node scripts/minimize-pipe.js'",
     "build": "parallelshell 'npm run build:html' 'npm run build:js'",
     "test": "echo \"Error: no test specified\" && exit 1",
