--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "angular": "^1.4.8",
     "angular-route": "^1.4.8",
     "body-parser": "^1.14.2",
+    "compression": "^1.6.0",
     "connect-mongodb-session": "^1.1.0",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
