--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Voting web app",
   "main": "server.js",
   "scripts": {
-    "build:js": "cpx 'client/modules/**/*.js' client/dist/modules -c 'uglifyjs --compress --mangle'",
+    "copy:js": "cpx 'client/modules/**/*.js' client/dist/modules",
+    "build:js": "npm run copy:js -- -c 'uglifyjs --compress --mangle'",
     "build:html": "cpx 'client/modules/**/*.html' client/dist/modules -c 'node scripts/minimize-pipe.js'",
     "build": "parallelshell 'npm run build:html' 'npm run build:js'",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "watch:js": "npm run build:js -- -w",
+    "watch:js": "npm run copy:js -- -w",
     "watch:html": "npm run build:html -- -w",
     "watch:server": "nodemon -q -I -w app -w server.js",
     "watch": "parallelshell 'npm run watch:js' 'npm run watch:html' 'npm run watch:server'"
