--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Voting web app",
   "main": "server.js",
   "scripts": {
+    "prestart": "npm run build",
     "copy:js": "cpx 'client/modules/**/*.js' client/dist/modules",
     "build:js": "npm run copy:js -- -c 'uglifyjs --compress --mangle'",
     "build:html": "cpx 'client/modules/**/*.html' client/dist/modules -c 'node scripts/minimize-pipe.js'",
