--- a/package.json
+++ b/package.json
@@ -31,19 +31,19 @@
     "body-parser": "^1.14.2",
     "compression": "^1.6.0",
     "connect-mongodb-session": "^1.1.0",
+    "cpx": "^1.2.1",
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
+    "minimize": "^1.8.1",
     "mongoose": "^4.3.3",
+    "parallelshell": "^2.0.0",
     "passport": "^0.3.2",
     "passport-github": "^1.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "uglify-js": "^2.6.1"
   },
   "devDependencies": {
-    "cpx": "^1.2.1",
-    "minimize": "^1.7.4",
-    "nodemon": "^1.8.1",
-    "parallelshell": "^2.0.0",
-    "uglify-js": "^2.6.1"
+    "nodemon": "^1.8.1"
   }
 }
